Closed Bug 1508527 Opened 7 years ago Closed 7 years ago

The memory reporter for ContentBlockingLog is wrong

Categories

(Core :: DOM: Core & HTML, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla65
Tracking Status
firefox-esr60 --- unaffected
firefox63 --- unaffected
firefox64 --- unaffected
firefox65 --- fixed

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

(Keywords: regression)

Attachments

(1 file)

This is where we allocate new items into the hashtable: <https://searchfox.org/mozilla-central/rev/b03a62c3c82316e733a3b09622c1cb7e59f64cc3/dom/base/ContentBlockingLog.h#82> In order to measure the memory usage correctly, we should measure the memory usage of OriginData first. That includes the nsTArray itself, so then we need to measure the size of the array excluding this.
Summary: The memory reporter for ContentBlocking is wrong → The memory reporter for ContentBlockingLog is wrong
Priority: -- → P2
Pushed by eakhgari@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/fd9a2224eb52 Fix the memory reporter for ContentBlockingLog r=baku
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: