Bug 1508527 - Fix the memory reporter for ContentBlockingLog r=baku

Differential Revision: https://phabricator.services.mozilla.com/D12380

--HG--
extra : moz-landing-system : lando